bench: Wire up jtag interface and extend  image makefile
I am working on testing openocd with the de0 nano and confirming
the sim works as expected is a first step.

The jtag debug interface was not working as expected as it was
never wired up correctly, wire it up and it seems to work fine
after that.

Add a few comments to the Makefile for spi images, I tested with
other images that do not just exit right away.

--- a/bench/Makefile
+++ b/bench/Makefile
@@ -1,5 +1,8 @@
 BOOTROM_ADDR ?= 0x80000
 RESET_VECTOR ?= 0x100
+# Default loads binaries straight to reset vector,
+# override to 0x0 for already offset elf binaries.
+LOAD_ADDRESS ?= 0x100
 IMAGE ?= spi_image
 IMAGE_NAME ?= $(IMAGE)
 
@@ -11,12 +14,14 @@ all: $(IMAGE).vh
 %.bin: %.elf
 	or1k-elf-objcopy -O binary $< $@
 
+# The spi image is a u-boot image and can be up to 8MB, the size of the
+# EPCS64.
 %.ub: %.bin
 	mkimage \
 	-A or1k \
 	-C none \
 	-T standalone \
-	-a 0x100 \
+	-a $(LOAD_ADDRESS) \
 	-e $(RESET_VECTOR) \
 	-n '$@' \
 	-d $< \
